# RingsAccounting

./: .env.example  .gitignore  README.md  agents.md  cae.patch  docker-compose.yml  files.txt  render.yaml  seed_user.py
.agent/workflows/: option-b-architecture.md
.github/workflows/: backend-ci.yml  ci.yml  codeql-analysis.yml  frontend-ci.yml
apps/admin/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/admin/src/: App.test.tsx
apps/api/: jest.config.js  package-lock.json  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/test/: flutterwave.webhook.spec.ts  ledger.service.spec.ts  payment.lifecycle.int.spec.ts  payments.router.spec.ts  webhook.idempotency.int.spec.ts
apps/customer/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  vite.config.mts  vite.config.mts.timestamp-1768469301610-9c22f651ec4e9.mjs  vite.config.mts.timestamp-1769530170165-e0a4d6220da8a.mjs  vitest.config.mts
backend-nest/: .env.example  .gitignore  docker-compose.yml  jest.config.js  package-lock.json  package.json
backend-nest/prisma/: schema.prisma
backend-nest/src/: app.module.ts  bootstrap.ts  main.ts
backend-nest/test/: jest-int.json  payments.int.spec.ts  payments.spec.ts
backend/app/: config.py  main.py  models.py
cloverbooks-backend/: .env.example  Cargo.toml  docker-compose.yml  schema.sql  seed.sql
cloverbooks-backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
cloverbooks-backend/src/payments/: adapter.rs  mock_gateway.rs  mod.rs
cloverbooks-backend/src/routes/: bills.rs  customers.rs  invoices.rs  mod.rs  vendors.rs  webhooks.rs
docs/: ARCHITECTURE_CUSTOMER_APP.md  COA_QBO_GAP_REVIEW_2026-02-10.md  COMPANION_TOWER_ARCHITECTURE.md  PERFORMANCE.md  admin_fintech_audit_2026-03-04.md  frontend_polish_benchmark_2026-03-05.md
docs/forensics/: project_candidates.md  repo_forensics.md
docs/perf/: bundle-report.after.html  bundle-report.before.html  customer-build.after.txt  customer-build.before.txt
prisma/: schema.prisma
rust-api/: .env.example  .gitignore  Cargo.toml
rust-api/migrations/: 20250301000000_companion_autonomy.sql  20260108120000_onboarding.sql  20260108141700_onboarding_hardening.sql  20260131110000_legacy_schema_migration.sql  20260131120000_items_inventory.sql  20260302000000_companion_settings.sql  20260302001000_agentic_documents.sql  20260315090000_marketing.sql  20260316000000_dashboard_perf_indexes.sql
rust-api/src/: main.rs
rust-api/src/companion_autonomy/: copy.rs  mod.rs  models.rs  policy.rs  scheduler.rs  schema.rs  store.rs  tool_gateway.rs
rust-api/src/companion_autonomy/agents/: categorization.rs  mod.rs  narrative.rs  orchestrator.rs  reconciliation.rs
rust-api/src/db/: mod.rs  models.rs  queries.rs
rust-api/src/routes/: admin.rs  agentic.rs  auth.rs  banking.rs  companion.rs  companion_autonomy.rs  control_plane_errors.rs  dashboard.rs  inventory.rs  matching.rs  mod.rs  onboarding.rs  reconciliation.rs  request_ids.rs  tax.rs
rust-api/tests/: api_tests.rs
scripts/frontend/: check-hard-nav.mjs  run-vitest-clean.mjs  verify-clean.mjs
scripts/guardrails/: check_separation.sh
strike/: admin_phase_memory.md
(+215 files in other folders)
